src/components/Projects/projects.css
.links {
  display: flex;
  justify-content: space-evenly;
}


.projectContainer {
  background-color: #f2f2f2;
  align-items: center;
  border-radius: 100px;
  border: 2px solid #007BFF;
  margin: 25px;
}

.technologies {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.text {
  text-align: center;
}

.gif {
  width: 400px;
  height:auto;
}

ul {
  list-style: none;
  font-weight: bold;
  padding: 0;
}

.tech {
  padding: 10px;
  border: 1px solid;
  background-color: white;
  border-radius: 999px;
}

/* .text-project {
  margin-top: 5rem;
} */

.project-button {
background-color: palegreen;
padding: 10px 20px;
font-weight: bold;
border-radius: 999px;

}

.project-button:hover {
  transform: scale(1.1);
}

.projects {
  padding-top: 40px;
  margin-top: -70px;
  min-height: 100vh;
}



@media only screen and (max-width: 360px) {

  .projectContainer {
    margin: 15px 5px; /* Reduce margins */
    border-radius: 20px; /* Reduce border radius */
  }

  .gif {
    width: 100%; /* Make images responsive */
    max-width: 300px; /* Maximum width for narrow screens */
  }



  .tech {
    padding: 5px 10px; /* Reduce padding */
    margin: 2px; /* Add small margin */
    font-size: 0.9rem; /* Slightly smaller font */
  }

}

